added show route, added href link, added mime types for allowing images to upload

--- a/resources/views/images/index.twig
+++ b/resources/views/images/index.twig
@@ -17,7 +17,7 @@
                 <tbody>
                     {% for image in images %}
                         <tr>
-                            <td>{{ image.name }}</td>
+                            <td><a href="{{ path_for('images.show', { 'id': image.id }) }}">{{ image.name }}</a></td>
                             <td>{{ image.created_at }}</td>
                             <td>{{ image.updated_at }}</td>
                             <td>
@@ -27,20 +27,6 @@
                     {% endfor %}
                 </tbody>
             </table>
-
-            {# <div class="panel panel-default">
-                <div class="panel-heading">Images</div>
-                <div class="panel-body">
-                    <form action="{{ path_for('image.upload') }}" method="post" autocomplete="off" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <label for="file">Select image to upload:</label>
-                            <input type="file" name="newFile">
-                        </div>
-                        <button type="submit" class="btn btn-default">Upload</button>
-                        {{ csrf.field | raw }}
-                    </form>
-                </div>
-            </div> #}
         </div>        
     </div>
 {% endblock %}
