--- a/resources/views/images/upload.twig
+++ b/resources/views/images/upload.twig
@@ -16,7 +16,7 @@
                         </div>
                         <div class="form-group">
                             <label for="file">Select image to upload</label>
-                            <input type="file" name="newFile">
+                            <input type="file" name="newfile">
                         </div>
                         <button type="submit" class="btn btn-default">Upload</button>
                         {{ csrf.field | raw }}
