--- a/resources/views/slides/index.twig
+++ b/resources/views/slides/index.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-1">
             <a href="{{ path_for('slides.add') }}" class="btn btn-info"><span class="glyphicon glyphicon-plus"></span> Add a Slide</a>
             <br><br>
             <table class="table table-striped table-bordered">
@@ -27,8 +27,8 @@
                             <td>{{ slide.created_at }}</td>
                             <td>{{ slide.updated_at }}</td>
                             <td>
-                                {#<a href="{{ path_for('images.edit', { 'id': image.id }) }}" class="btn btn-info btn-xs"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
-                                <a href="{{ path_for('images.delete', { 'id': image.id }) }}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash"></span> Delete</a>#}
+                                <a href="{{ path_for('slides.edit', { 'id': slide.id }) }}" class="btn btn-info btn-xs"><span class="glyphicon glyphicon-pencil"></span> Edit</a>
+                                <a href="{{ path_for('slides.delete', { 'id': slide.id }) }}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-trash"></span> Delete</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -40,7 +40,7 @@
     <hr>
 
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-1">
 
             <h2>Slide Preview</h2>
 
