--- a/resources/views/templates/partials/navigation.twig
+++ b/resources/views/templates/partials/navigation.twig
@@ -14,6 +14,7 @@
                 <li><a href="{{ path_for('home') }}">Home</a></li>
                 <li><a href="{{ path_for('images.index') }}">Images</a></li>
                 <li><a href="{{ path_for('slides.index') }}">Slides</a></li>
+                <li><a href="{{ path_for('marcas.index') }}">Marcas</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if auth.check %}
