--- a/resources/views/slides/add.twig
+++ b/resources/views/slides/add.twig
@@ -4,14 +4,14 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading">Slider</div>
+                <div class="panel-heading">Slides</div>
                 <div class="panel-body">
                     <form action="{{ path_for('slides.add') }}" method="post" autocomplete="off">
                         <div class="form-group{{ errors.order ? ' has-error' : '' }}">
                             <label for="order">Order</label>
                             <input type="number" name="order" id="order" class="form-control" value="{{ old.order }}">
                             {% if errors.order %}
-                                <span class="help-block">{{ order.name | first }}</span>
+                                <span class="help-block">{{ errors.order | first }}</span>
                             {% endif %}
                         </div>
                         <div class="form-group{{ errors.name ? ' has-error' : '' }}">
@@ -25,10 +25,9 @@
                             <label for="caption">Caption</label>
                             <input type="text" name="caption" id="caption" placeholder="caption text" class="form-control" value="{{ old.caption }}">
                             {% if errors.caption %}
-                                <span class="help-block">{{ caption.name | first }}</span>
+                                <span class="help-block">{{ errors.caption | first }}</span>
                             {% endif %}
                         </div>
-
                         <div class="form-group">
                             <label for="image">Select Image</label>
                             <select id="image" name="image" class="form-control">
