--- a/resources/views/marcas/add.twig
+++ b/resources/views/marcas/add.twig
@@ -21,16 +21,9 @@
                                 <span class="help-block">{{ errors.name | first }}</span>
                             {% endif %}
                         </div>
-                        <div class="form-group{{ errors.caption ? ' has-error' : '' }}">
-                            <label for="caption">Caption</label>
-                            <input type="text" name="caption" id="caption" placeholder="caption text" class="form-control" value="{{ old.caption }}">
-                            {% if errors.caption %}
-                                <span class="help-block">{{ errors.caption | first }}</span>
-                            {% endif %}
-                        </div>
                         <div class="form-group{{ errors.link ? ' has-error' : '' }}">
                             <label for="link">link</label>
-                            <input type="text" name="link" id="link" placeholder="link text" class="form-control" value="{{ old.link }}">
+                            <input type="text" name="link" id="link" placeholder="http://www.google.com.ar/" class="form-control" value="{{ old.link }}">
                             {% if errors.link %}
                                 <span class="help-block">{{ errors.link | first }}</span>
                             {% endif %}
