--- a/resources/views/slides/edit.twig
+++ b/resources/views/slides/edit.twig
@@ -4,14 +4,14 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-                <div class="panel-heading">Slider</div>
+                <div class="panel-heading">Slides</div>
                 <div class="panel-body">
                     <form action="{{ path_for('slides.edit', { 'id': slide.id }) }}" method="post" autocomplete="off">
                         <div class="form-group{{ errors.order ? ' has-error' : '' }}">
                             <label for="order">Order</label>
                             <input type="number" name="order" id="order" class="form-control" value="{{ slide.order }}">
                             {% if errors.order %}
-                                <span class="help-block">{{ order.name | first }}</span>
+                                <span class="help-block">{{ errors.order.name | first }}</span>
                             {% endif %}
                         </div>
                         <div class="form-group{{ errors.name ? ' has-error' : '' }}">
@@ -25,7 +25,7 @@
                             <label for="caption">Caption</label>
                             <input type="text" name="caption" id="caption" placeholder="caption text" class="form-control" value="{{ slide.caption }}">
                             {% if errors.caption %}
-                                <span class="help-block">{{ caption.name | first }}</span>
+                                <span class="help-block">{{ errors.caption | first }}</span>
                             {% endif %}
                         </div>
 
